hphp/hack/test/typecheck/shape_remove_key5.php.exp
File "shape_remove_key5.php", line 13, characters 31-32:
Shape access requires a string literal, integer literal, or a class constant (Typing[4051])
